# MEV

./: README.md
DC-Three-Tier/fattree10/configs/: aggregation-105  aggregation-106  aggregation-107  aggregation-108  aggregation-109  aggregation-115  aggregation-116  aggregation-117  aggregation-118  aggregation-119  aggregation-25  aggregation-26  aggregation-27  aggregation-28  aggregation-29  aggregation-35  aggregation-36  aggregation-37  aggregation-38  aggregation-39  aggregation-45  aggregation-46  aggregation-47  aggregation-48  aggregation-49  aggregation-55  aggregation-56  aggregation-57  aggregation-58  aggregation-59  aggregation-65  aggregation-66  aggregation-67  aggregation-68  aggregation-69  aggregation-75  aggregation-76  aggregation-77  aggregation-78  aggregation-79  (+85 more)
DC-Three-Tier/fattree12/configs/: aggregation-100  aggregation-101  aggregation-108  aggregation-109  aggregation-110  aggregation-111  aggregation-112  aggregation-113  aggregation-120  aggregation-121  aggregation-122  aggregation-123  aggregation-124  aggregation-125  aggregation-132  aggregation-133  aggregation-134  aggregation-135  aggregation-136  aggregation-137  aggregation-144  aggregation-145  aggregation-146  aggregation-147  aggregation-148  aggregation-149  aggregation-156  aggregation-157  aggregation-158  aggregation-159  aggregation-160  aggregation-161  aggregation-168  aggregation-169  aggregation-170  aggregation-171  aggregation-172  aggregation-173  aggregation-36  aggregation-37  (+140 more)
DC-Three-Tier/fattree14/configs/: aggregation-105  aggregation-106  aggregation-107  aggregation-108  aggregation-109  aggregation-110  aggregation-111  aggregation-119  aggregation-120  aggregation-121  aggregation-122  aggregation-123  aggregation-124  aggregation-125  aggregation-133  aggregation-134  aggregation-135  aggregation-136  aggregation-137  aggregation-138  aggregation-139  aggregation-147  aggregation-148  aggregation-149  aggregation-150  aggregation-151  aggregation-152  aggregation-153  aggregation-161  aggregation-162  aggregation-163  aggregation-164  aggregation-165  aggregation-166  aggregation-167  aggregation-175  aggregation-176  aggregation-177  aggregation-178  aggregation-179  (+205 more)
DC-Three-Tier/fattree16/configs/: aggregation-100  aggregation-101  aggregation-102  aggregation-103  aggregation-112  aggregation-113  aggregation-114  aggregation-115  aggregation-116  aggregation-117  aggregation-118  aggregation-119  aggregation-128  aggregation-129  aggregation-130  aggregation-131  aggregation-132  aggregation-133  aggregation-134  aggregation-135  aggregation-144  aggregation-145  aggregation-146  (+297 more)
batfish-master/: WORKSPACE  run.sh
batfish-master/JDD/: BUILD.bazel
batfish-master/command/: eBGP-fattree10  eBGP-fattree12  eBGP-fattree14  eBGP-fattree16  eBGP-fattree2  eBGP-fattree4  eBGP-fattree6  eBGP-fattree8  iBGP-full-bics  iBGP-full-columbus  iBGP-full-uscarrier  spine-leaf10  spine-leaf100  spine-leaf20  spine-leaf200  spine-leaf50  spine-leaf500  spine-leaf6
batfish-master/output/: fattree14.txt  fattree16.txt  fattree18.txt  fattree20.txt  iBGP-full-bics.txt  iBGP-full-columbus.txt  iBGP-full-uscarrier.txt  spine-leaf10.txt  spine-leaf100.txt  spine-leaf20.txt  spine-leaf200.txt  spine-leaf50.txt  spine-leaf500.txt  spine-leaf6.txt
batfish-master/projects/MEV/: BUILD.bazel
(+3497 files in other folders)
